dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: victor-service
  namespace: victor
  labels:
    app: victor
spec:
  selector:
    app: victor
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
