dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victor-ingress
  namespace: victor
spec:
  ingressClassName: nginx
  rules:
  - host: victor.rsupkandou.com
    http:
      paths:
      - backend:
          service:
            name: victor-service
            port:
              number: 8080
        path: /
        pathType: Prefix
